# fleetguard

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  index.html  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/fleetguard/: __init__.py  cli.py  models.py  report.py  simulator.py
src/fleetguard/fleet/: __init__.py  cost.py  telematics.py  vehicle.py
src/fleetguard/predictor/: __init__.py  components.py  model.py  scheduler.py
tests/: test_benchmark.py  test_core.py  test_fleetguard.py  test_integration.py
